--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-
+html, body {
+    min-height: 100vh;
+}
 
 body {
     --bg-color: hsl(210, 17%, 98%);
@@ -13,13 +15,7 @@ body {
     --light-purple: hsl(264, 82%, 80%);
     --txt-purple: hsl(260, 100%, 95%);
 
-    height: 100vh;
-
     background: var(--bg-color);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     font-family: 'Barlow Semi Condensed';
     font-weight: 500;
     font-size: 13px;
@@ -31,17 +27,20 @@ body {
 main {
     display: grid;
     max-width: 80rem;
-    width: 100%;
+    width: fit-content;
+    height: auto;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-rows: 1fr 1fr;
     row-gap: 2em;
     column-gap: 2.5em;
+    margin: 5rem auto
 }
 
 h1 {
     font-weight: 600;
     font-size: clamp(1.3rem, 2vw, 1.5rem);
     line-height: 1.75rem;
-
+    z-index: 10;
 }
 
 article {
@@ -51,15 +50,15 @@ article {
     padding: 2rem;
     border-radius: .8rem;
     box-shadow: 1.5rem 2.9rem 2rem var(--sh-color);
+    z-index: 10;
 }
 
 article div {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
 }
 
-article img {
+.userFoto {
     border-radius: 50%;
     width: 2.1rem;
     margin-right: 1.2rem;
@@ -70,6 +69,7 @@ article img {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    z-index: 10;
 }
 
 .name, .carge {
@@ -90,14 +90,20 @@ main article:last-child {
 }
 
 .cn__purple {
+    position: relative;
     background: var(--cnt-purple);
     color: var(--txt-purple);
+    overflow: hidden;
+    z-index: 0;
+    display: flex;
+    flex-direction: column;
 }
 .cn__purple h1 {
     color: var(--white);
 }
-.cn__purple img {
+.cn__purple .userFoto {
     border-color: var(--light-purple);
+    z-index: 2;
 }
 
 .cn__dark {
@@ -121,15 +127,24 @@ main article:last-child {
 
 .attribution {
     margin-top: 5rem;
+    z-index: 11;
+}
+
+.comas {
+    position: absolute;
+    top: 0;
+    right: 8em;
+    height: 9em;
 }
 
 @media (max-width: 1030px) {
     body {
-        height: 100%;
+        width: 100vw;
     }
 
     main {
-        margin: 2em;
+        box-sizing: border-box;
+        width: 100vw;
     }
 
     main article:first-child {
